<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_devices_other_black_24dp"
        android:title="@string/technical"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_fitness_center_black_24dp"
        android:title="@string/sports"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/club"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/cultural"
        android:icon="@drawable/ic_color_lens_black_24dp"
        android:title="@string/cultural"
        app:showAsAction="ifRoom"/>

</menu>
