<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="#000"
tools:context="org.poornima.aarohan.aarohan2017.LoginActivity">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="17dp">
    <ImageView
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:background="#fff"
        android:layout_marginTop="30dp"/>

    <View
        android:id="@+id/myview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerVertical="true"
        android:background="#000000" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_above="@id/myview"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:textColorHint="#fff"
        android:textColor="#fff">

        <EditText
            android:id="@+id/email"
            android:hint="@string/enter_your_email_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/myview"
        android:textColorHint="#fff">
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:hint="@string/enter_password_here"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_lock_black_24dp"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:text="@string/log_in"
        android:textColor="#000"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:background="@drawable/shape_button"/>
</RelativeLayout>


</RelativeLayout>